--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <meta> charset="UTF-8">
+    <meta charset="UTF-8">
     <title>lindsey elizabeth tong</title>
- </head>
+<!-- link css stylesheet here -->
+<link rel="stylesheet" href="css/styles.css">
+<!-- find  lato and josephin sans font links in google fonts and insert links here-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
 
- <body>
+</head>
+<body>
+
 
    <nav>
    <a href="inspiration/inspiration.html">inspiration</a>
@@ -15,11 +28,15 @@
 
    <h1>my name is lindsey elizabeth tong</h1>
    <img src="img/lindsey.png">
-   <p>I love going on hikes around the Bay Area <a href="https://www.alltrails.com/trail/
-   us/california/glen-canyon-park-trail">especially this trail at Glen Canyon.</a>
+   <p>I'm a senior at SF State studying Vis Comm. I'm from the city and have been here my whole life. In my free time, I love going on hikes around the Bay Area <a href="https://www.alltrails.com/trail/
+   us/california/glen-canyon-park-trail"> especially this trail at Glen Canyon. </a>
+   
+   I also like makeup and playing video games. I'm passionate about having good mental health and staying in touch with friends and family.
    <br>
-   I like bringing my dog on hikes too but some trails don't allow him. He also gets
-   aggressive around other dogs sometimes but loves humans. </p>
+   <br>
+   I have a dog named Pepper. He is an Australian Shepherd and is extremely fluffy and hairy and spoiled. I like bringing him on hikes too but some trails don't allow him. He also gets aggressive around other dogs sometimes but loves humans. </p>
+
+   <img src="img/pepper.png">
 
    </body>
    </html> 
