--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -5,6 +5,16 @@
     <title>Inspirations</title>
  </head>
  <body>
+
+<!-- link css stylesheet here -->
+<link rel="stylesheet" href="css/styles.css">
+<!-- find  lato and josephin sans font links in google fonts and insert links here-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
    <nav>
    <a href="../index.html">home</a>
    <a href="inspiration/inspiration.html">inspiration</a>
