--- a/index.html
+++ b/index.html
@@ -3,40 +3,71 @@
  <head>
     <meta charset="UTF-8">
     <title>lindsey elizabeth tong</title>
+
 <!-- link css stylesheet here -->
 <link rel="stylesheet" href="css/styles.css">
 <!-- find  lato and josephin sans font links in google fonts and insert links here-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 
 </head>
 <body>
 
 
    <nav>
-   <a href="inspiration/inspiration.html">inspiration</a>
-   <a href="index.html">home</a>
-   <a href="topFive/topFive.html">top fives</a>
+      <a href="inspiration/inspiration.html">inspiration</a>
+      <a href="index.html">home</a>
+      <a href="topFive/topFive.html">top fives</a>
    </nav>
 
-   <h1>my name is lindsey elizabeth tong</h1>
-   <img src="img/lindsey.png">
-   <p>I'm a senior at SF State studying Vis Comm. I'm from the city and have been here my whole life. In my free time, I love going on hikes around the Bay Area <a href="https://www.alltrails.com/trail/
-   us/california/glen-canyon-park-trail"> especially this trail at Glen Canyon. </a>
-   
-   I also like makeup and playing video games. I'm passionate about having good mental health and staying in touch with friends and family.
+   <h1>₊✩‧₊˚౨my name is lindsey elizabeth tongৎ˚₊✩‧₊</h1>
    <br>
    <br>
-   I have a dog named Pepper. He is an Australian Shepherd and is extremely fluffy and hairy and spoiled. I like bringing him on hikes too but some trails don't allow him. He also gets aggressive around other dogs sometimes but loves humans. </p>
+   <img class="center" src="img/lindsey.png">
+   <br>
+   <br>
+   <p>I'm a senior at SF State majoring in Visual Communication Design and minoring in Video Game Studies. I'm from the city and have been here my whole life. In my free time, I love going on hikes around the Bay Area<a href="https://www.alltrails.com/trail/
+   us/california/glen-canyon-park-trail">especially this trail at Glen Canyon.</a>
+   <br>
+   <br>
+<p>I also like makeup and playing video games. I love doing dramatic, colorful looks with graphic liner. A few of my favorite games include Borderlands: The Pre-Sequel and Portal 2. I like playing solo games that just allow me to have fun and solve puzzles without any sweats ruining the mood. Some of my favorite musical artists include Ariana Grande, Sunset Rollercoaster, and Chloe Bailey and I go to concerts a couple times a year. I'm passionate about having good mental health and staying in touch with friends and family and helping out around the house. I have a wonderful partner named Matthew that I have been with for over a year, we always go on nice day trips together. In the past, we've been to Monterey Bay Aquarium, hiked Mount Tamalpais, and Great America. I'm not a fan of rollercoasters but I do enjoy small rides. As you could probably tell by the website, I am a fan of Halloween. Funnily enough I don't like horror movies, but I like the culture and aesthetics around Halloween as well as how enthusiastic people are about celebrating and dressing up.</p>
+   <br>
+   <br>
+   <img class="center" src="img/pumpkin.gif">
+   <br>
+   <br>
+   <h2>meet pepper the skag</h2>
 
-   <img src="img/pepper.png">
+   <p>I have a dog named Pepper. I nickname him  skag, ugly xhag and nice dog. He is an Australian Shepherd and is extremely fluffy and hairy and spoiled. I like bringing him on hikes too but some trails don't allow him. He also gets aggressive around other dogs sometimes but loves humans. I always make fun of him for doing nothing all day except for eating, sleeping, and pooping. He is basically an unemployed cow in the house that just racks up bills for existing. </p>
+   <br>
+   <br>
+
+   <img class="center" src="img/pepper.png">
+
+       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+       <title>Email Me Section</title>
+   </head>
+   <body>
+       <h3> ✩ Contact Me! ✩ </h3>
+       <p> Reach out and <a href="ltong@sfsu.edu">email me</a>!</p>
+
 
    </body>
    </html> 
