--- a/topFive/topFive.html
+++ b/topFive/topFive.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <meta> charset="UTF-8"
+    <meta charset="UTF-8">
     <title>Top 5s</title>
  </head>
  <body>
+
+   <link rel="stylesheet" href="css/styles.css">
+   <!-- find  lato and josephin sans font links in google fonts and insert links here-->
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    
+   <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   
+   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   
+   <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   
+   <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
    <nav>
    <a href="../index.html">home</a>
    <a href="../inspiration/inspiration.html">inspiration</a>
@@ -19,50 +40,27 @@
 <ol>
    <li>fluffy pancakes</li>
       <img src="img/pancakes.png" alt="a fluffy stack of pancakes topped with butter">
-      <a href="https://www.allrecipes.com/recipe/162760/fluffy-pancakes/"
+      <a href="https://www.allrecipes.com/recipe/162760/fluffy-pancakes/"></a>
 
 <br>
    <li>blueberry oatmeal</li>
       <img src="img/oatmeal.png" alt="a bowl of oatmeal with blueberries">
-      <a href="https://www.eatingbirdfood.com/blueberry-oatmeal/"
+      <a href="https://www.eatingbirdfood.com/blueberry-oatmeal/"></a>
 <br>
    <li>cereal with milk</li>
       <img src="img/cereal.png" alt="a bowl of cereal with milk and a spoon">
-      <a href="https://thedairyalliance.com/blog/cereal-and-milk-when-to-pour"
+      <a href="https://thedairyalliance.com/blog/cereal-and-milk-when-to-pour"></a>
 <br>
    <li>sourdough garlic toast</li>
       <img src="img/toast.png" alt="well browned garlic sourdough toast">
-      <a href="https://thenessykitchen.com/sourdough-garlic-toast/"
+      <a href="https://thenessykitchen.com/sourdough-garlic-toast/"></a>
 <br>
    <li>avocado smoothies</li>
       <img src="img/smoothie.png" alt="a glass of avocado smoothie">
-      <a href="https://www.wokandkin.com/vietnamese-avocado-smoothie/"
+      <a href="https://www.wokandkin.com/vietnamese-avocado-smoothie/"></a>
 
 </ol>
 
-<h2>The Top 5 Most Popular SF Restaurants</h2>
-<ul>
-   <li>scoma's</li>
-      <a href="https://scomas.com/"</a>
-         
-<br>
-   <li>abaca's</li> 
-      <a href="https://www.restaurantabaca.com"</a>
-<br>
-   <li><a href="https://www.dalidasf.com">dalida's</a></li>
-      <a href="https://www.dalidasf.com"</a>
-<br>
-   <li>golden boy pizza</li>
-      <a href="https://www.goldenboypizza.com"</a>
-<br>
-   <li>maison nico</li>
-      <img src="img/maison.png" alt="a bustling cafe counter hosted by two cashiers">
-      <a href="https://maisonnico.com"</a>
-<br>
-</ul>
-
-</body>
-</html>
 
 <h2>Top 5 Hello Kittys</h2>
 
@@ -82,7 +80,10 @@
    <dt> <img src="img/xmaskitty.png" alt="hello kitty in xmas clothes and props" </dt>
       <dd>original hello kitty opening christmas gifts</dd>
 <br> 
-</dl>
+</dl> 
+
+</body>
+</html>
 
 
 
