--- a/inspiration/inspiration.html
+++ b/inspiration/inspiration.html
@@ -1,20 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-    <meta> charset="UTF-8"
+    <meta charset="UTF-8">
     <title>Inspirations</title>
- </head>
- <body>
 
 <!-- link css stylesheet here -->
 <link rel="stylesheet" href="css/styles.css">
 <!-- find  lato and josephin sans font links in google fonts and insert links here-->
+
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
 <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet"> 
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&display=swap" rel="stylesheet">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+</head>
+<body>
+
+
    <nav>
    <a href="../index.html">home</a>
    <a href="inspiration/inspiration.html">inspiration</a>
@@ -33,12 +49,12 @@
          <img src="img/producing.png" alt="Grande producing music while facing a lit computer screen">
 <br>
 <br>
-   I chose these three examples of Ariana's career because they inspired me at different walks of life. 
+   <p>I chose these three examples of Ariana's career because they inspired me at different walks of life. 
    Sweetener was a very experimental pop album that incorporated both modern and more old fashioned elements 
    in its production and widened my taste in music. Seeing Ariana being heavily involved in producing her 
    latest album in an industry where it is common for artists to rely on producers made me appreciate her music 
    more. Lastly, seeing her involvement in the benefit concert after a terrorist attack at her Dangerous Woman 
-   Tour concert in 2017 made me highly regard her as a person and reminded me how to stay strong in the face of fear.
+   Tour concert in 2017 made me highly regard her as a person and reminded me how to stay strong in the face of fear.</p>
 <br>
 <br>
          <a href="https://en.wikipedia.org/wiki/Puppet_Combo"><h3>Puppet Combo</h3></a>
@@ -50,12 +66,12 @@
 <br> 
          
 
-   I chose Puppet Combo, heralded by Ben Cocuzza because his games fascinated me with the PS1 horror style aesthetics
+<p>I chose Puppet Combo, heralded by Ben Cocuzza because his games fascinated me with the PS1 horror style aesthetics
    unique to his games. I especially liked the retro flairs within the games that felt both dated in a nostalgic way 
    but also newer with more advanced mechanics and themes. In an environment where games are all expected to be as 
    polished and brilliant as possible, PC was the opposite. Night Shift was one of my favorite games to watch 
    YouTubers play. As someone who has also developed games, Puppet Combo was one of my first introductions to an indie
-   studio and taught me a few things about Unity. 
+   studio and taught me a few things about Unity. </p>
 <br>
 <br>
          <a href="https://www.amazon.com/Intern-Novel-Michele-Campbell/dp/1250274974"><h3>Michele Campbell</h3></a>
@@ -67,11 +83,11 @@
 <br> 
 
 
-   I chose to put Michele Campbell here because she is one of my favorite authors of my recent years. I put my favorite, 
+<p>I chose to put Michele Campbell here because she is one of my favorite authors of my recent years. I put my favorite, 
    'It's Always the Husband' first because it was one of the most relatable stories to me of recent years. I could relate
    to the environment and experiences of the characters as I am in college as well and have experienced some of their 
    turmoils. Her books made me realize my enjoyment of murder mysteries and helped enhance my vocabulary and 
-   writing expertise. 
+   writing expertise. </p>
 
 </body>
 </html>
